--- a/release.env
+++ b/release.env
@@ -1,6 +1,6 @@
 APPLICATION_NAME="snippets"
-VERSION="0.0.0"
-NICK_NAME="🍉 [watermelon]"
+VERSION="0.0.1"
+NICK_NAME="🥝 [kiwi]"
 TAG="v${VERSION}" # for git
 IMAGE_TAG="${VERSION}"
 IMAGE_BASE_NAME="${APPLICATION_NAME}"
